targetsystem/src/scripts/nodes/controlPlane/kubernetesWS/kub_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: foo-app
          image: iuresf/apprunner
          resources:
            requests:
              cpu: "750m"
            limits:
              cpu: "750m"
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
    - port: 9898
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-app
  labels:
    app: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
        - name: bar-app
          image: iuresf/apprunner
          resources:
            requests:
              cpu: "750m"
            limits:
              cpu: "750m"
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
    - port: 9898
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: test-app
          image: iuresf/apprunner
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "100m"
---
kind: Service
apiVersion: v1
metadata:
  name: test-service
spec:
  selector:
    app: test
  ports:
    - port: 9898
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
    - host: "*.amazonaws.com"
      http:
        paths:
          - pathType: Prefix
            path: /foo
            backend:
              service:
                name: foo-service
                port:
                  number: 9898
          - pathType: Prefix
            path: /bar
            backend:
              service:
                name: bar-service
                port:
                  number: 9898
          - pathType: Prefix
            path: /test
            backend:
              service:
                name: test-service
                port:
                  number: 9898
